# konachan-tauri

./: .commitlintrc.json  .gitignore  .gitmodules  .postcssrc  README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.test.tsx  App.tsx  app.pcss  index.tsx  mock.json  splashscreen.html  store.ts  store.tsx
src-tauri/: .gitignore  Cargo.toml  cspell.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commander.rs  image.rs  lib.rs  main.rs
src/component/Background/: index.tsx  test.tsx
src/component/DotLine/: index.tsx  test.tsx
src/component/Download/: index.tsx  test.tsx
src/component/Image/: test.tsx
src/component/ImageList/: index.tsx  style.pcss  test.tsx
src/component/Loading/: test.tsx
src/component/Page/: index.tsx  style.pcss  test.tsx
src/component/Progress/: style.pcss  test.tsx
src/component/Search/: index.tsx
src/component/Service/: index.tsx  test.tsx
src/component/Setting/: index.tsx  style.pcss  test.tsx
src/component/Wave/: Wave.test.ts  test.tsx
src/css/: _base.pcss  _var.pcss
src/hook/: useImageLoad.ts  useWaterfall.ts
src/model/: ctx.ts  downloadItem.ts
src/utils/: action.ts
test/mock/: file.ts  mousetrap.ts  tauri-api.ts  tauri-event.ts
test/util/: index.tsx
