[package]
authors = ["franciscowxp"]
build = "src/build.rs"
default-run = "app"
description = "konachan"
edition = "2021"
license = "MIT"
name = "app"
repository = "https://github.com/lf-wxp/konachan-tauri.git"
version = "1.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "blocking", "stream"] }
roxmltree = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-http = "2.5.2"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.1"
urlencoding = "2.1.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
